# t8y

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  scene_editor_bak.cpp
asset/: design.psd  font.psd  logo.psd
backup/: memory_bus.cpp  memory_bus.h
deprecated/: t8_utils_zip.cpp  t8_utils_zip.h
include/: app.h  app_context.h  constants.h  edit_view.h  font.h  graphic.h  input.h  lua_vm.h  t8_buffer.h  t8_console.h  t8_constants.h  t8_core_context.h  t8_core_emulator.h  t8_core_memory.h  t8_core_painter.h  t8_core_vm.h  t8_core_window.h  t8_editor.h  t8_emulator.h  t8_executor.h  t8_font.h  t8_fstream.hpp  t8_gamepad.h  t8_graphic.h  t8_input_gamepad.h  t8_input_keybd.h  t8_input_keyboard.h  t8_input_mouse.h  t8_keybd.h  t8_memory.h  t8_mouse.h  t8_scene.h  t8_scene_console.h  t8_scene_editor.h  t8_scene_editor_script.h  t8_scene_executor.h  t8_script.h  t8_signal.h  t8_sinput.h  t8_storage.h  (+14 more)
include/core/: context.h  emulator.h  gfx.h  memory.h  painter.h  window.h
include/input/: gamepad.h  keyboard.h  mouse.h
include/scene/: console.h  editor_sheet.h
include/ted/: buffer.hpp  editor.hpp  record.hpp  selection.hpp
include/text_editor/: t8_text_editor.hpp  t8_text_editor_buffer.hpp  t8_text_editor_record.hpp  t8_text_editor_selection.hpp
include/utils/: algo.h  timer.hpp
origin/include/: buffer.h  console_view.h  emulator.h  exec_view.h  font_png.h  graphic.h  input.h  scene.h  signals.h  text_editor.h  utils.h
origin/src/: app.cpp  exec_view.cpp  lua_vm.cpp  signals.cpp  timer.cpp  utils.cpp  virtual_screen.cpp
src/: console_view.cpp  edit_view.cpp  emulator.cpp  exec_view.cpp  graphic.cpp  input.cpp  t8_console.cpp  t8_editor.cpp  t8_emulator.cpp  t8_executor.cpp  t8_gamepad.cpp  t8_graphic.cpp  t8_keybd.cpp  t8_memory.cpp  t8_mouse.cpp  t8_script.cpp  t8_signal.cpp  t8_sinput.cpp  t8_storage.cpp  t8_textedit.cpp  t8_timer.cpp  t8_utils.cpp  t8_vm.cpp  t8_vscreen.cpp  t8_window.cpp  text_editor.cpp  timer.cpp  window.cpp
temporay moved/: console.cpp  console.h  editor.h  editor_map.h  editor_sheet.cpp  executor.cpp
(+34 files in other folders)
